styles/globals.scss
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  img,
  video {
    max-width: initial;
    height: initial;
  }
  @font-face {
    font-family: "NTSeawaveAlt";
    font-style: normal;
    font-weight: 400;
    font-display: "swap";
    src: url("/fonts/NTSeawaveAlt.otf");
  }
  @font-face {
    font-family: "FogtwoNo5";
    font-style: normal;
    font-weight: 400;
    src: url("/fonts/FogtwoNo5.ttf");
  }
  @font-face {
    font-family: "NeutralFace";
    font-style: normal;
    font-weight: 400;
    src: url("/fonts/NeutralFace.otf");
  }
  body {
    @apply bg-orange-100 text-stone-900 dark:bg-stone-900 dark:text-orange-100 transition-colors duration-700;
  }
  @media (prefers-color-scheme: dark) {
    html {
      color-scheme: dark;
    }
    body {
      @apply bg-orange-100 text-stone-900 transition-colors duration-700;
    }
  }
}
@layer utilities {
  .w-18 {
    width: 4.5rem;
  }
}
*,
html,
body {
  cursor: none;
}
html,
body {
  padding: 0;
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
  width: 100vw;
}

body {
  min-height: 100vh;
  min-height: -webkit-fill-available;
  min-height: stretch;
}

html {
  min-height: -webkit-fill-available;
  min-height: stretch;
}

.mobile-screen {
  min-height: 100vh;
  min-height: -moz-available;
  min-height: -webkit-fill-available;
  min-height: stretch;
}

a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
}

#hero-img {
  height: 100%;
  width: auto;
  max-width: 100%;
}

.stacksvg {
  @apply w-10 sm:w-12 md:w-14 lg:w-16;
}

.contactsvg {
  @apply w-10 md:w-12 xl:w-14;
}

